<resources>
    <string name="app_name">Hotyi</string>
    <string name="print_phone_num">请输入你的手机号码</string>
    <string name="print_password_num">请输入你的密码</string>
    <string name="foget_password">忘记密码</string>
    <string name="regist_id">注册账号</string>
    <string name="login">登  录</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_my_integral">MyIntegral</string>
    <string name="title_activity_game_hub">GameHubActivity</string>
    <string name="title_activity_self_info">SelfInfoActivity</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="title_activity_my_base">MyBaseActivity</string>
    <string name="title_activity_new_friend_list">NewFriendListActivity</string>
    <string name="title_activity_my_dialog">MyDialogActivity</string>
    <string name="title_activity_private_chat_detail">PrivateChatDetailActivity</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="title_activity_discussion_detail">DiscussionDetailActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_my_game_circle">MyGameCircleActivity</string>
    <string name="title_activity_my_activity">MyActivityActivity</string>
    <string name="title_activity_my_game">MyGameActivity</string>
    <string name="title_activity_my_code">MyCodeActivity</string>
    <string name="title_activity_regist_finally">RegistFinallyActivity</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="title_activity_my_group">MyGroupActivity</string>
    <string name="title_activity_my_guild">MyGuildActivity</string>
    <string name="title_activity_third_login_bind">ThirdLoginBindActivity</string>
    <string name="title_activity_sub_conversation_list">SubConversationListActivity</string>

    <dimen name="login_imgbtn_width">40dip</dimen>
    <dimen name="login_choose_btn_width">20dip</dimen>
    <string name="title_activity_guild_detail">GuildDetailActivity</string>
    <string name="title_activity_game_list">GameListActivity</string>
    <string name="title_activity_game_detail_info">GameDetailInfoActivity</string>
    <string name="title_activity_guild_simple_info">GuildSimpleInfoActivity</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_activity_base_ui">BaseUiActivity</string>
    <string name="title_activity_guild_members">GuildMembersActivity</string>
    <string name="title_activity_group_members">GroupMembersActivity</string>
    <string name="title_activity_search_acriviry">SearchAcriviry</string>

</resources>
